--- a/index.html
+++ b/index.html
@@ -3,10 +3,60 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>world-peas</title>
-    <link rel="stylesheet" href="assets/styles/main.css">
+    <title>world peas</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Host+Grotesk:ital,wght@0,300..800;1,300..800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- google-fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Host+Grotesk:ital,wght@0,300..800;1,300..800&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assets/styles/main.css" />
   </head>
   <body>
-
+    <header>
+      <div class="container">
+        <a class="logo" href="#">World Peas</a>
+        <nav>
+          <ul>
+            <li><a href="#">Shop</a></li>
+            <li><a href="#">Newstand</a></li>
+            <li><a href="#">Who we are</a></li>
+            <li><a href="#">My profile</a></li>
+            <li>
+              <a class="basket-btn" href="#">Basket <span>(3)</span></a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <section class="hero">
+        <div class="container">
+          <h1>
+            We’re farmers, purveyors, and eaters of organically grown food.
+          </h1>
+          <a class="btn" href="#">Browse our shop</a>
+        </div>
+      </section>
+      <div class="gallery">
+        <div class="lettuce">
+          <img src="assets/images/lettuce.webp" alt="lettuce plant" />
+        </div>
+        <figure>
+          <img src="assets/images/banger.webp" alt="banger plant" />
+          <figcaption>
+            Central California — The person who grew these was located in
+            Central California and, er, hopefully very well-compensated.
+          </figcaption>
+        </figure>
+      </div>
+    </main>
   </body>
 </html>
