Modified On Gallery Section And Create Article Content

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li><a href="#">Who we are</a></li>
             <li><a href="#">My profile</a></li>
             <li>
-              <a class="basket-btn" href="#">Basket <span>(3)</span></a>
+              <a class="basket-btn" href="shopping.html">Basket <span>(3)</span></a>
             </li>
           </ul>
         </nav>
@@ -39,9 +39,7 @@
     <main>
       <section class="hero">
         <div class="container">
-          <h1>
-            We’re farmers, purveyors, and eaters of organically grown food.
-          </h1>
+          <h1>We’re farmers, purveyors, and eaters of organically grown food.</h1>
           <a class="btn" href="#">Browse our shop</a>
         </div>
       </section>
@@ -51,12 +49,27 @@
         </div>
         <figure>
           <img src="assets/images/banger.webp" alt="banger plant" />
-          <figcaption>
-            Central California — The person who grew these was located in
-            Central California and, er, hopefully very well-compensated.
-          </figcaption>
+          <figcaption>Central California — The person who grew these was located in Central California and, er, hopefully very well-compensated.</figcaption>
         </figure>
       </div>
+      <article>
+        <div class="container">
+          <h2>WHAT WE BELIEVE</h2>
+          <div class="content">
+            <h3>We believe in produce. Tasty produce. Produce like:</h3>
+            <p>
+              Apples. Oranges. Limes. Lemons. Guavas. Carrots. Cucumbers. Jicamas. Cauliflowers. Brussels sprouts. Shallots. Japanese eggplants. Asparagus. Artichokes—Jerusalem artichokes, too.
+              Radishes. Broccoli. Baby broccoli. Broccolini. Bok choy. Scallions. Ginger. Cherries. Raspberries. Cilantro. Parsley. Dill.
+            </p>
+            <h3>What are we forgetting?</h3>
+            <p>
+              Oh! Onions. Yams. Avocados. Lettuce. Arugula (to some, “rocket”). Persian cucumbers, in addition to aforementioned “normal” cucumbers. Artichokes. Zucchinis. Pumpkins. Squash (what some
+              cultures call pumpkins). Sweet potatoes and potato-potatoes. Jackfruit. Monk fruit. Fruit of the Loom. Fruits of our labor (this website). Sorrel. Pineapple. Mango. Gooseberries.
+              Blackberries. Tomatoes. Heirloom tomatoes. Beets. Chives. Corn. Endive. Escarole, which, we swear, we’re vendors of organic produce, but if you asked us to describe what escaroles are...
+            </p>
+          </div>
+        </div>
+      </article>
     </main>
   </body>
 </html>
