Creat: title The  Basket

--- a/product.html
+++ b/product.html
@@ -5,6 +5,46 @@
     <meta name="description" content="this is best page"/>
   </head>
   <body>
-    
+    <div class="cards">
+      <div class="tomato-card">
+        <img src="assets/images/Tomato-1.webp" alt="tomato plant" />
+        <div class="content">
+          <div class="text">
+            <h2>Heirloom tomato</h2>
+            <span>$5.99 / lb</span>
+            <p>1 lb</p>
+          </div>
+          <div class="price">
+            <span>$5.99</span>
+          </div>
+        </div>
+      </div>
+      <div class="ginger-card">
+        <img src="assets/images/ginger-1.webp" alt="tomato plant" />
+        <div class="content">
+          <div class="text">
+            <h2>Organic ginger</h2>
+            <span>$12.99 / lb</span>
+            <p>0.5 lb</p>
+          </div>
+          <div class="price">
+            <span>$6.50</span>
+          </div>
+        </div>
+      </div>
+      <div class="onion-card">
+        <img src="assets/images/onion.webp" alt="tomato plant" />
+        <div class="content">
+          <div class="text">
+            <h2>Sweet onion</h2>
+            <span>$2.99 / lb</span>
+            <p>5 lb</p>
+          </div>
+          <div class="price">
+            <span>$14.95</span>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
