Creat: Tomato Card

--- a/shopping.html
+++ b/shopping.html
@@ -31,6 +31,21 @@
             <h1>Basket</h1>
             <span>3 items</span>
           </div>
+          <div class="cards">
+            <div class="tomato-card">
+              <img src="assets/images/Tomato-1.webp" alt="tomato plant" />
+              <div class="content">
+                <div class="text">
+                  <h2>Heirloom tomato</h2>
+                  <span>$5.99 / lb</span>
+                  <p>1 lb</p>
+                </div>
+                <div class="price">
+                  <span>$5.99</span>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
