--- a/product.html
+++ b/product.html
@@ -1,8 +1,8 @@
-<!Doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="Utf-8"/>
-    <meta name="description" content="this is best page"/>
+    <meta charset="Utf-8" />
+    <meta name="description" content="this is best page" />
   </head>
   <body>
     <div class="cards">
@@ -19,30 +19,30 @@
           </div>
         </div>
       </div>
-      <div class="ginger-card">
-        <img src="assets/images/ginger-1.webp" alt="tomato plant" />
-        <div class="content">
-          <div class="text">
-            <h2>Organic ginger</h2>
-            <span>$12.99 / lb</span>
-            <p>0.5 lb</p>
-          </div>
-          <div class="price">
-            <span>$6.50</span>
-          </div>
+    </div>
+    <div class="ginger-card">
+      <img src="assets/images/ginger-1.webp" alt="tomato plant" />
+      <div class="content">
+        <div class="text">
+          <h2>Organic ginger</h2>
+          <span>$12.99 / lb</span>
+          <p>0.5 lb</p>
+        </div>
+        <div class="price">
+          <span>$6.50</span>
         </div>
       </div>
-      <div class="onion-card">
-        <img src="assets/images/onion.webp" alt="tomato plant" />
-        <div class="content">
-          <div class="text">
-            <h2>Sweet onion</h2>
-            <span>$2.99 / lb</span>
-            <p>5 lb</p>
-          </div>
-          <div class="price">
-            <span>$14.95</span>
-          </div>
+    </div>
+    <div class="onion-card">
+      <img src="assets/images/onion.webp" alt="tomato plant" />
+      <div class="content">
+        <div class="text">
+          <h2>Sweet onion</h2>
+          <span>$2.99 / lb</span>
+          <p>5 lb</p>
+        </div>
+        <div class="price">
+          <span>$14.95</span>
         </div>
       </div>
     </div>
