--- a/shopping.html
+++ b/shopping.html
@@ -45,6 +45,19 @@
                 </div>
               </div>
             </div>
+            <div class="ginger-card">
+              <img src="assets/images/ginger-1.webp" alt="tomato plant" />
+              <div class="content">
+                <div class="text">
+                  <h2>Organic ginger</h2>
+                  <span>$12.99 / lb</span>
+                  <p>0.5 lb</p>
+                </div>
+                <div class="price">
+                  <span>$6.50</span>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
