--- a/shopping.html
+++ b/shopping.html
@@ -58,6 +58,19 @@
                 </div>
               </div>
             </div>
+            <div class="onion-card">
+              <img src="assets/images/onion.webp" alt="tomato plant" />
+              <div class="content">
+                <div class="text">
+                  <h2>Sweet onion</h2>
+                  <span>$2.99 / lb</span>
+                  <p>5 lb</p>
+                </div>
+                <div class="price">
+                  <span>$14.95</span>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
