--- a/shopping.html
+++ b/shopping.html
@@ -31,45 +31,65 @@
             <h1>Basket</h1>
             <span>3 items</span>
           </div>
-          <div class="cards">
-            <div class="tomato-card">
-              <img src="assets/images/Tomato-1.webp" alt="tomato plant" />
-              <div class="content">
-                <div class="text">
-                  <h2>Heirloom tomato</h2>
-                  <span>$5.99 / lb</span>
-                  <p>1 lb</p>
+          <div class="all-cards">
+            <div class="cards-vegetables">
+              <div class="tomato-card">
+                <img src="assets/images/Tomato-1.webp" alt="tomato plant" />
+                <div class="content">
+                  <div class="text">
+                    <h2>Heirloom tomato</h2>
+                    <span>$5.99 / lb</span>
+                    <p>1 lb</p>
+                  </div>
+                  <div class="price">
+                    <span>$5.99</span>
+                  </div>
                 </div>
-                <div class="price">
-                  <span>$5.99</span>
+              </div>
+              <div class="ginger-card">
+                <img src="assets/images/ginger-1.webp" alt="tomato plant" />
+                <div class="content">
+                  <div class="text">
+                    <h2>Organic ginger</h2>
+                    <span>$12.99 / lb</span>
+                    <p>0.5 lb</p>
+                  </div>
+                  <div class="price">
+                    <span>$6.50</span>
+                  </div>
+                </div>
+              </div>
+              <div class="onion-card">
+                <img src="assets/images/onion.webp" alt="tomato plant" />
+                <div class="content">
+                  <div class="text">
+                    <h2>Sweet onion</h2>
+                    <span>$2.99 / lb</span>
+                    <p>5 lb</p>
+                  </div>
+                  <div class="price">
+                    <span>$14.95</span>
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="ginger-card">
-              <img src="assets/images/ginger-1.webp" alt="tomato plant" />
-              <div class="content">
-                <div class="text">
-                  <h2>Organic ginger</h2>
-                  <span>$12.99 / lb</span>
-                  <p>0.5 lb</p>
+            <div class="order-summary">
+              <h2>Order summary</h2>
+              <div class="content-order-summary">
+                <div class="text-order-summary">
+                  <span>Subtotal</span>
+                  <span>Shipping</span>
+                  <span>Tax</span>
+                  <span class="total-price">Total</span>
                 </div>
-                <div class="price">
-                  <span>$6.50</span>
-                </div>
-              </div>
-            </div>
-            <div class="onion-card">
-              <img src="assets/images/onion.webp" alt="tomato plant" />
-              <div class="content">
-                <div class="text">
-                  <h2>Sweet onion</h2>
-                  <span>$2.99 / lb</span>
-                  <p>5 lb</p>
-                </div>
-                <div class="price">
-                  <span>$14.95</span>
+                <div class="price-order-summary">
+                  <span>$27.44</span>
+                  <span>$3.99</span>
+                  <span>$2.00</span>
+                  <span class="total-price">$33.43</span>
                 </div>
               </div>
+              <a class="btn" href="product.html">Continue to payment</a>
             </div>
           </div>
         </div>
