--- a/product.html
+++ b/product.html
@@ -1,10 +1,27 @@
-<!Doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <meta charset="Utf-8"/>
-    <meta name="description" content="this is best page"/>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Product Page</title>
+    <link rel="stylesheet" href="assets/styles/navbar.css">
   </head>
   <body>
-    
+    <header>
+      <div class="container">
+        <a class="logo" href="#">World Peas</a>
+        <nav>
+          <ul>
+            <li><a href="#">Shop</a></li>
+            <li><a href="#">Newstand</a></li>
+            <li><a href="#">Who we are</a></li>
+            <li><a href="#">My profile</a></li>
+            <li>
+              <a class="basket-btn" href="#">Basket <span>(3)</span></a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
   </body>
 </html>
