Create: Card Tomato And Card Ginger And Responsive Design

--- a/product.html
+++ b/product.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product Page</title>
-    <link rel="stylesheet" href="assets/styles/navbar.css">
+    <link rel="stylesheet" href="assets/styles/navbar.css" />
+    <link rel="stylesheet" href="assets/styles/product.css" />
   </head>
   <body>
     <header>
@@ -23,5 +24,44 @@
         </nav>
       </div>
     </header>
+    <main>
+      <section class="product-title">
+        <div class="container">
+          <div class="title">
+            <div class="content-left">
+              <h1>Produce</h1>
+              <p>Fresh — August 21, 2023</p>
+            </div>
+            <div class="content-right">
+              <span class="btn">Default</span>
+              <span>A-Z</span>
+              <span>List view</span>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="product-cards">
+        <div class="container">
+          <div class="cards">
+            <div class="card-tomato">
+              <img src="assets/images/Tomato-1.webp" alt="tomato plant" />
+              <div class="text">
+                <h2>Heirloom tomato</h2>
+                <span>$5.99 / lb</span>
+                <p>Grown in San Juan Capistrano, CA</p>
+              </div>
+            </div>
+            <div class="card-ginger">
+              <img src="assets/images/ginger-1.webp" alt="tomato plant" />
+              <div class="text">
+                <h2>Organic ginger</h2>
+                <span>$12.99 / lb</span>
+                <p>Grown in San Juan Capistrano, CA</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
